--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -7,7 +7,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Cambio de password</h4>
+        <h4 class="modal-title">Cambiar Contraseña</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
       </div>
@@ -17,24 +17,24 @@
 
           <div class="row">
             <div class="col-sm-12 ">
-              <p class="text-center">Utilice el siguiente formulario para cambiar su contraseña</p>
+              <p class="text-left">Utilice el siguiente formulario para cambiar su contraseña</p>
               <form method="post" id="passwordForm">
-                <input type="password" class="input-lg form-control" ng-model="newPass" name="password1" id="password1" placeholder="New Password" autocomplete="off">
+                <input type="password" class="input-lg form-control" ng-model="newPass" name="password1" id="password1" placeholder="Contraseña nueva" autocomplete="off">
                 <div class="row">
                 <div class="col-sm-6">
                 <span id="8char" class="fa fa-times" style="color:#FF0004;"></span> 8 caracteres de largo<br>
-                <span id="ucase" class="fa fa-times" style="color:#FF0004;"></span> One Uppercase Letter
+                <span id="ucase" class="fa fa-times" style="color:#FF0004;"></span> Una letra mayúscula
                 </div>
                 <div class="col-sm-6">
-                <span id="lcase" class="fa fa-times" style="color:#FF0004;"></span> Una letra mayúscula<br>
-                <span id="num" class="fa fa-times" style="color:#FF0004;"></span> Un numero
+                <span id="lcase" class="fa fa-times" style="color:#FF0004;"></span> Una letra minúscula<br>
+                <span id="num" class="fa fa-times" style="color:#FF0004;"></span> Un número
                 </div>
                 </div>
                 <input type="password"
                 class="input-lg form-control"
                 ng-model="user.passwordConfirm"
                 ng-keyup="errorPass()"
-                name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
+                name="password2" id="password2" placeholder="Repetir contraseña" autocomplete="off">
                 <div class="row">
                 <div class="col-sm-12">
                 <span id="pwmatch" class="fa fa-times" style="color:#FF0004;"></span> Las contraseñas coinciden
@@ -93,7 +93,7 @@
 
                     <form>
                       <div class="form-group">
-                        <label for="exampleInputEmail1">Username</label>
+                        <label for="exampleInputEmail1">Nombre de usuario</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" ng-model="user.username" ng-disabled="typeview == 'view'"  placeholder="Enter email">
 
                       </div>
@@ -102,7 +102,7 @@
                         <input type="text" class="form-control" id="exampleInputPassword1" ng-model="user.name" ng-disabled="typeview == 'view'" placeholder="Nombre">
                       </div>
 
-                      <button class="btn btn-primary" ng-if="typeview == 'view'" data-toggle="modal" data-target="#modalPsw" >Cambiar Password</button>
+                      <button class="btn btn-primary" ng-if="typeview == 'view'" data-toggle="modal" data-target="#modalPsw" >CAMBIAR CONTRASEÑA</button>
                     </form>
                   </div>
 
