--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -19,14 +19,14 @@
                     <div class="input-group">
                       <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
                       <!-- <input id="email" name="email" ng-model="user.username" placeholder="email o username" class="form-control"  type="email"> -->
-                      <input type="text" ng-model="user.username"   class="form-control" placeholder="Username">
+                      <input type="text" ng-model="user.username"   class="form-control" placeholder="Nombre de usuario">
                     </div>
                   </div>
                   <div class="form-group">
                     <!-- <input name="recover" class="btn btn-lg btn-primary btn-block" ng-click="resetPass(user)"   type="button"> -->
                     <button class="btn btn-lg btn-primary btn-block"  ng-click="resetPass(user)" >
                        <!-- <i class="fa fa-clock"></i> -->
-                       Restablecer contraseña</button>
+                       RESTABLECER CONTRASEÑA</button>
                   </div>
 
                   <a href="#!/">Volver</a>
