--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -121,14 +121,14 @@
             <tr>
 
               <th scope="col"><p class="text-center">#</p></th>
-              <th scope="col"><p class="text-center">Nombre Producto</p></th>
-              <th scope="col"><p class="text-center">Categoria</p></th>
+              <th scope="col"><p class="text-center">Nombre producto</p></th>
+              <th scope="col"><p class="text-center">Categoría</p></th>
               <th scope="col"><p class="text-center">Existencia</p></th>
               <th scope="col"><p class="text-center">Precio Bs.S</p></th>
               <th scope="col"><p class="text-center">Iva Bs.S</p></th>
               <th scope="col"><p class="text-center">Precio USD</p></th>
-              <th scope="col"><p class="text-center">Iva USD</p></th>
-              <th scope="col"><p class="text-center">Principio Activo</p></th>
+              <th scope="col"><p class="text-center">IVA USD</p></th>
+              <th scope="col"><p class="text-center">Principio activo</p></th>
               <th scope="col"><p class="text-center">Proveedor</p></th>
             </tr>
           </thead>
