--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -141,7 +141,7 @@
               <td><p class="text-left">{{ $index + 1 }}</p></td>
               <td>
                 <picture>
-                  <source  srcset="{{ srcServer+x.nombre_producto }}" type="image/webp">
+                  <source  srcset="{{ srcServer+x.dir_imagen }}" type="image/webp">
                 </picture></td>
               <td><p class="text-left">{{ x.nombre_producto }}</p></td>
               <td><p class="text-left">{{ x.categoria }}</p></td>
