--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -140,7 +140,7 @@
   
               <td><p class="text-left">{{ $index + 1 }}</p></td> 
               <td>
-                <img src="{{ srcServer+x.dir_imagen }}" alt="https://www.freeiconspng.com/img/23485" style="width: 120px;">
+                <img src="{{  srcServer+x.dir_imagen }}" alt="https://www.freeiconspng.com/img/23485" onerror="{{ imgError(this) }}" style="width: 120px;">
               </td>
               <td><p class="text-left">{{ x.nombre_producto }}</p></td>
               <td><p class="text-left">{{ x.categoria }}</p></td>
