--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -237,7 +237,7 @@
 
                                           <td class="right">{{formato(2,totalesDdo.totalGravado)}} </td>
                                     </tr>
-                                    <tr ng-if="totalesDdo.descImpuesto != null">
+                                    <tr ng-if="totalesDdo.descImpuesto != null || totalesDdo.impuesto != 0">
                                         <td class="right">
                                             <strong class="text-dark">{{totalesDdo.descImpuesto }} </strong> </td>
   
@@ -577,7 +577,7 @@
 
                                       <td class="right">{{formato(2,totalesDdo.totalGravado)}} </td>
                                 </tr>
-                                <tr>
+                                <tr ng-if="totalesDdo.descImpuesto != null || totalesDdo.impuesto != 0">
                                   <td class="right">
                                       <strong class="text-dark">{{totalesDdo.descImpuesto }} </strong> </td>
 
