--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -763,7 +763,9 @@
                             <td><p class="text-left">{{ $index + 1 }}</p></td>
                             <td><i class="fa fa-eye" style="cursor: pointer;"  ng-click="selectProduct($index)" ></i></td>
                             <td> 
-                              <img src="{{  srcServer+x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                              <div ng-if="x.dir_imagen != ''">
+                                <img src="{{  srcServer+x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                              </div>
                             </td>
                             <td><p class="text-left">{{ x.nombre_producto }}</p></td>
                             <td><p class="text-left">{{ x.categoria }}</p></td>
