--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -140,7 +140,10 @@
   
               <td><p class="text-left">{{ $index + 1 }}</p></td> 
               <td> 
-                <img src="{{  srcServer+x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                <div ng-if="x.dir_imagen != ''">
+
+                  <img src="{{  srcServer+x.dir_imagen }}" alt="no image"  style="width: 120px;">
+                </div>
               </td>
               <td><p class="text-left">{{ x.nombre_producto }}</p></td>
               <td><p class="text-left">{{ x.categoria }}</p></td>
